<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/app_background"
                android:orientation="vertical"
                tools:context="in.co.gamedev.bookexchange.activity.MyBooksActivity">

    <TextView
        android:text="@string/owned_books_list_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/top_header"/>

    <TextView
        android:id="@+id/zero_books_help_text"
        android:text="@string/empty_owned_books_list_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_books_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/book_list"/>

    <Button
        android:id="@+id/add_book_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/button"
        android:text="@string/add_book"/>

</LinearLayout>
