<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_location_help_text"
        style="@style/top_header"/>

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        class="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/location_range_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/location_range_entries"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_range_text"
            style="@style/bottom_help_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/set_location_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/set_location_button"
        style="@style/button"
        android:layout_marginBottom="20dp"/>

</LinearLayout>